@@ -296,15 +296,9 @@ Argp.prototype._printUsage = function (){
 		var o;
 			
 		//Short names go first
-		//-h and -v are the first options
-		if (this._optionsShort.h) short += "h";
-		if (this._optionsShort.v) short += "v";
-		
 		for (var p in this._optionsShort){
-			if (p === "h" || p === "v") continue;
-			
 			o = this._optionsShort[p];
-			if (o.hidden) continue;
+			if (o.hidden || o.long) continue;
 			
 			if (o.flag){
 				short += p;
@@ -324,13 +318,33 @@ Argp.prototype._printUsage = function (){
 		});
 		
 		//Long names
-		this._lines.forEach (function (o){
-			if (!o.long || o.hidden) return;
+		var longArgs = {};
+		
+		for (var p in this._optionsLong){
+			o = this._optionsLong[p];
+			if (o.hidden || longArgs[p]) continue;
 			
-			usage += " [--" + o.long + (o.flag
+			usage += " [";
+			
+			if (o.short){
+				usage += "-" + o.short + "|";
+			}
+			
+			usage += "--" + o.long;
+			
+			if (o.aliases){
+				var me = this;
+				o.aliases.forEach (function (alias){
+					//Remember the alias
+					longArgs[alias] = true;
+					usage += "|--" + alias;
+				});
+			}
+			
+			usage += (o.flag
 					? "]"
 					: (o.optional ? "[=" + o.argument + "]" : "=" + o.argument) + "]");
-		});
+		}
 		
 		if (Object.keys (this._arguments).length){
 			for (var p in this._arguments){
