@@ -5,8 +5,10 @@ var argv = require("./lib")
 			//console.log(this.options())
 		})
 		.body ()
-				.option ({ short: "a", long: "abc", argument:"asd", type: Number, optional: true, choices: [2] })
+				.option ({ short: "a", long: "abc", argument:"asd", aliases:["wat","por"] })
+				.option ({ short: "c" })
 				.help()
+				.usage()
 				.end ()
 		.argv ()
 console.log(argv)
